fixed line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ main {
 
 section h3 {
     color: #3590ba;
+    letter-spacing: 3px;
 }
 
 .sec-2 {
